[package]
name = "zeppelin_cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A command line tool to use `zeppelin_core`"
default-run = "zep"

[dependencies]
zeppelin_core = "0.1"
clap = {version = "3.2", features = ["derive"]}
# ctrlc = "3.2"
console = "0.15"
dialoguer = "0.10"

[[bin]]
name = "zep"
path = "src/main.rs"